# dd-trace-py

./: docker-compose.yml  pyproject.toml  riotfile.py
ddtrace/bootstrap/: sitecustomize.py
ddtrace/internal/: agent.py
tests/tracer/: test_agent.py
